edition = "2023";  // successor to proto2 and proto3

package wrapper;

import "google/protobuf/any.proto";

option go_package = "./internalapi/wrapper;wrapper";

// Splunk notification needs the source of data
// and the type of data.
message SplunkEvent {
  google.protobuf.Any event = 1;
  string source = 2;
  string sourcetype = 3;
}
